# meshgit

./: CMakeLists.txt  LICENSE  README  build-xcode.sh  cmake-mk.sh
src/: CMakeLists.txt  Makefile  camera.cpp  camera.h  color_gradient.cpp  color_gradient.h  debug.cpp  debug.h  debuglog.h  draw_utils.h  geom.cpp  geom.h  globals.cpp  globals.h  gls.h  image.h  io_bin.cpp  io_bin.h  io_json.cpp  io_json.h  light.cpp  light.h  mat.h  mesh_utils.cpp  mesh_utils.h  meshgit.cpp  meshgit.h  meshgit_cameras.cpp  meshgit_diff.cpp  meshgit_drawmesh.cpp  meshgit_drawutils.cpp  meshgit_globals.cpp  meshgit_merge.cpp  meshgit_viewer.cpp  object.h  panel.cpp  panel.h  panelbackground.cpp  panelbackground.h  property.h  (+7 more)
src/ext/common/: CMakeLists.txt  array.h  binio.cpp  binio.h  debug.h  frame.h  geom.h  json.cpp  json.h  list.h  montecarlo.h  pam.cpp  pam.h  quaternion.h  random.cpp  random.h  random_engine.cpp  random_engine.h  range.h  raw.cpp  ray.h  stdmath.cpp  stdmath.h  timer.h  vec.h
src/ext/lodepng/: LICENSE
src/meshgit_lib/: CMakeLists.txt  binheap.h  kdtree.cpp  kdtree.h  mesh.cpp  mesh.h  quicksort.cpp  quicksort.h
